# pyrwgps

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: pytest.yml
.github/workflows/: black.yml  flake8.yml  mypy.yml  pylint.yml  pytest.yml
pyrwgps/: apiclient.py  ridewithgps.py
ridewithgps/: __init__.py  apiclient.py  base.py  ratelimiter.py  ridewithgps.py
scripts/: doit.py  example.py  scrub_cassettes.py
tests/: test_apiclient.py  test_base.py  test_integration.py  test_patch_integration.py  test_ratelimiter.py  test_ridewithgps.py
tests/cassettes/: ridewithgps_fetch_20_rides.yaml  ridewithgps_list_limit_30.yaml
