[project]
name = "ridewithgps"
version = "0.0.1"
authors = [
  { name = "Chris Kelly", email = "ckdake@ckdake.com" },
]
description = "A simple Python client for the [RideWithGPS API](https://ridewithgps.com/api).

Note: this is super under development and in no way should be used without reading
all of the code first. I'll remove this notice once I'm actually using this package!"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/ckdake/python-ridewithgps"
Issues = "https://github.com/ckdake/python-ridewithgps/issues"
PyPI = "https://pypi.org/project/ridewithgps/"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"