[project]
name = "pyrwgps"
version = "0.1.0"
authors = [
  { name = "Chris Kelly", email = "ckdake@ckdake.com" },
]
description = "A Python client for the RideWithGPS API. Not affiliated with RideWithGPS."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
license = "MIT"
license-files = ["LICENSE*"]
dependencies = [
    "certifi>=2026.1.4",
    "urllib3>=2.6.3"
]

[project.optional-dependencies]
dev = [
  "certifi==2026.1.4",
  "urllib3==2.6.3",
  "build==1.4.0",
  "twine==6.2.0",
  "pylint==4.0.5",
  "black==26.1.0",
  "mypy==1.19.1",
  "flake8==7.3.0",
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  "vcrpy==8.1.1",
  "pyyaml==6.0.3"
]

[project.urls]
Homepage = "https://github.com/ckdake/pyrwgps"
Changelog = "https://github.com/ckdake/pyrwgps/blob/main/CHANGELOG.md"
Issues = "https://github.com/ckdake/pyrwgps/issues"
PyPI = "https://pypi.org/project/pyrwgps/"

[build-system]
requires = ["hatchling >= 1.28"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["pyrwgps"]

[tool.mypy]
# ...other mypy config...

[[tool.mypy.overrides]]
module = "urllib3.*"
ignore_missing_imports = true

[tool.hatch.build.targets.sdist]
include = [
  "pyrwgps/py.typed"
]

[tool.hatch.build.targets.wheel]
include = [
  "pyrwgps/py.typed"
]